--- a/Pal.html
+++ b/Pal.html
@@ -61,7 +61,10 @@
         createOrder: function (data, actions) {
           return actions.order.create({
             purchase_units: [{
-              amount: { value: paymentData.Plan_Cost }
+              amount: { 
+                value: paymentData.Plan_Cost,
+                currency_code: "USD"
+              }
             }],
             application_context: {
               shipping_preference: "NO_SHIPPING"
