--- a/stack.html
+++ b/stack.html
@@ -73,7 +73,7 @@
             body: JSON.stringify({
               email: email,
               Plan_Name: planName,
-              Plan_Cost: planCost,
+              Plan_Cost: `Ksh ${planCost}`,
               Plan_Expiry: planExpiry,
               abbreviation: abbreviation,
               Country: countryFormatted,
