--- a/stack.html
+++ b/stack.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pay with Paystack</title>
   <script src="https://js.paystack.co/v1/inline.js"></script>
   <style>
@@ -13,7 +14,7 @@
   </style>
 </head>
 <body>
-  <h2>Initializing Paystack...</h2>
+  <h2>Initiating Payment...</h2>
 
   <script>
     (async function () {
