--- a/stack.html
+++ b/stack.html
@@ -26,7 +26,7 @@
         return;
       }
 
-      // ✅ Step 1: Retrieve sensitive data from KV via Cloudflare
+      // ✅ Step 1: Retrieve payment data from Cloudflare Worker (KV)
       const dataRes = await fetch("https://paystack-access-code.alexskeioslav.workers.dev/get?ref=" + ref);
       if (!dataRes.ok) {
         alert("Failed to load payment data.");
@@ -37,35 +37,42 @@
 
       const {
         email,
-        planName,
-        planCost,
-        planExpiry,
+        Plan_Name,
+        Plan_Cost,
+        Plan_Expiry,
         abbreviation,
-        countryFormatted,
-        paidAt
+        Country
       } = data;
 
-      // ✅ Step 2: Start Paystack payment
+      if (!email || !Plan_Cost) {
+        alert("Missing required payment fields.");
+        return;
+      }
+
+      // ✅ Step 2: Launch Paystack payment UI
       PaystackPop.setup({
         key: 'pk_live_d4f57287975b08a2f8f84538fe5f16a5bde44286',
         email: email,
-        amount: parseFloat(planCost) * 100,
+        amount: parseFloat(Plan_Cost.replace(/[^\d.]/g, "")) * 100, // Convert "Ksh 5500" → 550000
         currency: "KES",
         ref: ref,
         onClose: function () {
           alert("Payment window closed.");
         },
         callback: function (response) {
+          const paidAt = new Date().toISOString();
+
+          // ✅ Step 3: Send confirmation to subscription handler
           fetch("https://omp-subscription-handler.alexskeioslav.workers.dev/", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
               email: email,
-              Plan_Name: planName,
-              Plan_Cost: `Ksh ${planCost}`,
-              Plan_Expiry: planExpiry,
+              Plan_Name: Plan_Name,
+              Plan_Cost: Plan_Cost,
+              Plan_Expiry: Plan_Expiry,
               abbreviation: abbreviation,
-              Country: countryFormatted,
+              Country: Country,
               paid_at: paidAt,
               transactionId: response.reference
             }),
