--- a/Pal.html
+++ b/Pal.html
@@ -14,54 +14,61 @@
     }
   </style>
   <script>
-    function getPaymentData() {
-      try {
-        const params = new URLSearchParams(window.location.search);
-        const data = {
-          email: params.get("email") || "",
-          Client_Id: params.get("Client_Id") || "",
-          Plan_Name: params.get("Plan_Name") || "Default Plan",
-          Country: params.get("Country") || "",
-          Country_Code: params.get("Country_Code") || "US",
-          Plan_Cost: params.get("Plan_Cost") || "0.00",
-          Plan_Expiry: params.get("Plan_Expiry") || "",
-          abbreviation: params.get("abbreviation") || ""
-        };
+    const PAYPAL_SCRIPT_URL = "https://www.paypal.com/sdk/js";
 
-        // Validate required fields
+    async function getPaymentData() {
+      const params = new URLSearchParams(window.location.search);
+      const ref = params.get("ref");
+
+      if (!ref) {
+        alert("Missing reference.");
+        return null;
+      }
+
+      try {
+        const res = await fetch(`https://init-paypal.alexskeioslav.workers.dev/get?ref=${ref}`);
+        if (!res.ok) {
+          alert("❌ Failed to retrieve payment data.");
+          return null;
+        }
+        const data = await res.json();
+
+        // Validate
         if (!data.email || !data.Client_Id || !data.Plan_Name || !data.Plan_Cost) {
-          console.error("Missing required data.");
+          alert("❌ Incomplete payment data.");
           return null;
         }
 
-        return data;
-      } catch (error) {
-        console.error("Error parsing query params: ", error);
+        return { ...data, ref };
+      } catch (err) {
+        console.error("Error fetching payment data:", err);
+        alert("❌ Error loading payment info.");
         return null;
       }
     }
 
-    const paymentData = getPaymentData();
+    let paymentData = null;
 
-    if (paymentData) {
-      document.addEventListener("DOMContentLoaded", function () {
-        document.body.style.display = "block";
-        document.getElementById("plan-name").textContent = paymentData.Plan_Name;
-        document.getElementById("cost").textContent = paymentData.Plan_Cost;
+    document.addEventListener("DOMContentLoaded", async () => {
+      paymentData = await getPaymentData();
+      if (!paymentData) return;
 
-        const script = document.createElement("script");
-        script.src = `https://www.paypal.com/sdk/js?client-id=${paymentData.Client_Id}`;
-        script.onload = loadPayPalButtons;
-        document.body.appendChild(script);
-      });
-    }
+      document.body.style.display = "block";
+      document.getElementById("plan-name").textContent = paymentData.Plan_Name;
+      document.getElementById("cost").textContent = paymentData.Plan_Cost;
+
+      const script = document.createElement("script");
+      script.src = `${PAYPAL_SCRIPT_URL}?client-id=${paymentData.Client_Id}`;
+      script.onload = loadPayPalButtons;
+      document.body.appendChild(script);
+    });
 
     function loadPayPalButtons() {
       paypal.Buttons({
-        createOrder: function (data, actions) {
+        createOrder: (data, actions) => {
           return actions.order.create({
             purchase_units: [{
-              amount: { 
+              amount: {
                 value: paymentData.Plan_Cost,
                 currency_code: "USD"
               }
@@ -71,39 +78,36 @@
             }
           });
         },
-        onApprove: function (data, actions) {
-          return actions.order.capture().then(function (details) {
-            setTimeout(() => {
-              alert("✅ Payment Successful!\n\nYou can now return to the app.");
-            }, 200);
+        onApprove: async (data, actions) => {
+          const details = await actions.order.capture();
+          const transactionId = details.id;
+          const paidAt = new Date().toISOString();
+          const formattedCountry = `${paymentData.Country} (${paymentData.Country_Code})`;
 
-            const transactionId = details.id;
-            const paidAt = new Date().toISOString();
-            const formattedCountry = `${paymentData.Country} (${paymentData.Country_Code})`;
+          const payload = {
+            email: paymentData.email,
+            Plan_Name: paymentData.Plan_Name,
+            Plan_Cost: `$${paymentData.Plan_Cost}`,
+            Plan_Expiry: paymentData.Plan_Expiry,
+            abbreviation: paymentData.abbreviation,
+            transactionId,
+            paid_at: paidAt,
+            Country: formattedCountry,
+            Payment_Method: "PayPal"
+          };
 
-            const cloudflareUrl = "https://omp-subscription-handler.alexskeioslav.workers.dev/";
-
-            const payload = {
-              email: paymentData.email,
-              Plan_Name: paymentData.Plan_Name,
-              Plan_Cost: `$${paymentData.Plan_Cost}`,
-              Plan_Expiry: paymentData.Plan_Expiry,
-              abbreviation: paymentData.abbreviation,
-              transactionId: transactionId,
-              paid_at: paidAt,
-              Country: formattedCountry
-            };
-
-            fetch(cloudflareUrl, {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json"
-              },
-              body: JSON.stringify(payload)
-            })
-            .then(response => response.json())
-            .then(data => console.log("✅ Sent:", data))
-            .catch(error => console.error("❌ Error:", error));
+          fetch("https://omp-subscription-handler.alexskeioslav.workers.dev/", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json"
+            },
+            body: JSON.stringify(payload)
+          })
+          .then(() => {
+            alert("✅ Payment successful! You can now return to the app.");
+          })
+          .catch(() => {
+            alert("Payment failed.");
           });
         }
       }).render("#paypal-button-container");
@@ -119,4 +123,3 @@
   <div id="paypal-button-container"></div>
 </body>
 </html>
-
